<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSave"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_edittext"
                    android:editable="false"
                    android:hint="@string/str_name"
                    android:inputType="none"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/edMobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_edittext"
                    android:editable="false"
                    android:hint="@string/str_mobile"
                    android:inputType="none"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/edAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_edittext"
                    android:editable="false"
                    android:hint="@string/str_address"
                    android:inputType="none"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/str_password"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorYellow"
        android:padding="15dp"
        android:text="@string/str_update"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</RelativeLayout>