<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--  <android.support.design.widget.NavigationView
          android:id="@+id/nav_view"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="start"
          android:fitsSystemWindows="true"
          app:headerLayout="@layout/nav_header_home"
          app:menu="@menu/activity_home_drawer" />-->


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorNavBack"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include
                        layout="@layout/nav_header_home"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />

                    <LinearLayout
                        android:id="@+id/llMenu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/tvMenuHome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:drawableLeft="@drawable/ic_special_order"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text="@string/menu_regular_order"
                            android:textColor="@color/colorWhite" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.7dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvMenuSpecialOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:drawableLeft="@drawable/ic_special_order"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text="@string/menu_special_order"
                            android:textColor="@color/colorWhite" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.7dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvMenuOrderHistory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:drawableLeft="@drawable/ic_order_history_white"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text="@string/menu_order_history"
                            android:textColor="@color/colorWhite" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.7dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvMenuProfile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:drawableLeft="@drawable/ic_profile_white"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text="@string/menu_profile"
                            android:textColor="@color/colorWhite" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.7dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvMenuLanguage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:drawableLeft="@drawable/ic_lang_white"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text="@string/menu_settings"
                            android:textColor="@color/colorWhite" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.7dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvMenuLogout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:drawableLeft="@drawable/ic_logout_white"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text="@string/menu_logout"
                            android:textColor="@color/colorWhite" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.7dp"
                            android:background="@android:color/darker_gray" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
